# ChangeLog for squashmount

*squashmount-3.1
	Martin Väth <martin at mvath.de>:
	- modprobe modules by default
	- Support flags !, !!, ?, ??, # in @order
	- Support $modprobe_squashfs
	- Set @order to empty string if not needed
	- Use qw(...) in examples where it makes sense
	- standard_mount() and added_hash() can now be called without &

*squashmount-2.10
	Martin Väth <martin at mvath.de>:
	- Support FILL and FILLFUNC

*squashmount-2.9
	Martin Väth <martin at mvath.de>:
	- fix tmpfiles.d content which caused sometimes breakage with systemd
	- fix systemd/openrc deps to avoid most problems even with "D" setting
	- document emergency case explicitly
	- improve behaviour in emergency case (getting DIR)
	- cosmetical code cleanup

*squashmount-2.8
	Martin Väth <martin at mvath.de>:
	- fix: --error and --fatal can work together
	- fix restart: postpone forget, not releasing lock too early
	- Improve error handling for writing to /run/squashmount

*squashmount-2.7
	Martin Väth <martin at mvath.de>:
	- Introduce --locking and $locking and make it default
	- New check command
	- Add tmpfiles.d
	- squashmount -fI {u,}mount now even continues after error
	- Allow -f for status and print-... and improve results without -f

*squashmount-2.6
	Martin Väth <martin at mvath.de>:
	- Require -f for restart to forget+start an umounted mountpoint
	- Introduce --ignore-state to deal better with exceptional
	  situations caused by bugs (in squashmount or its config) or
	  by manual interfering

*squashmount-2.5
	Martin Väth <martin at mvath.de>:
	- Fix severe typo which caused umount to not save its state:
	  Regression introduced in squashmount-2.3 (=squashmount-2.4)

*squashmount-2.4
*squashmount-2.3
	Martin Väth <martin at mvath.de>:
	- Fix serious bug with restart command (forgetting despite mounting)
	- Change of the /run/squashmount format (MOUNT_RW is now part of TYPE).
	  Be aware that this can lead to problems for mount-points mounted
	  with an older version of squashmount!